--- a/health-care/src/landingcomponent/PagesMain/Homelan.css
+++ b/health-care/src/landingcomponent/PagesMain/Homelan.css
@@ -6,6 +6,7 @@
     justify-content: center;
     border: 2px solid white;
     border-width: 2px 0;
+    /* border: 1px solid red; */
 }
 
 .style__pharmaHeader___1hcdG h1 {
