--- a/health-care/src/landingcomponent/PagesMain/Homecarosal.css
+++ b/health-care/src/landingcomponent/PagesMain/Homecarosal.css
@@ -382,7 +382,7 @@ font-size: 14px;
             flex-direction: row;
         }
         .mnbvcdfghyulong {
-max-width: 1280px;
+/* max-width: 1280px; */
     margin: 0 auto;
     width:100%;
         }
