--- a/health-care/src/landingcomponent/PagesMain/Banner.css
+++ b/health-care/src/landingcomponent/PagesMain/Banner.css
@@ -10,18 +10,26 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    /* border: 1px solid gray; */
+    padding: 5px 15px;
+    font-size: 15px;
+    color: red;
+    font-weight: 700;
+    background-color: white;
     
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
+    background-color:white;
+    color: black;
+    /* min-width: 150px; */
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    width: 300px;
-    font-size: 12px;
+    width:190px;
+    height: 200px;
+    font-size: 14px;
     font-weight: 600;
 }
 
@@ -33,7 +41,7 @@
 }
 
 .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color:white;
 }
 
 .dropdown:hover .dropdown-content {
@@ -42,7 +50,7 @@
 
 .dropdown:hover .dropbtn {
     /* background-color: #3e8e41; */
-    color: red;
+    /* color: red; */
 }
 .sliderresponsivert{
     width: 100%;
