--- a/health-care/src/landingcomponent/PagesMain/Homelan.css
+++ b/health-care/src/landingcomponent/PagesMain/Homelan.css
@@ -67,7 +67,7 @@ img {
     margin: 20px 10px;
     padding: 8px 12px;
     border-radius: 3px;
-    background-color: #fff;
+    background-color:white;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
     display: none;
 }
@@ -156,7 +156,7 @@ padding:0px 10px;
     margin: 20px 10px;
     padding: 8px 12px;
     border-radius: 3px;
-    background-color: #fff;
+    background-color: #f6f2f2;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
     display: block;
 }
