--- a/health-care/src/landingcomponent/Login.css
+++ b/health-care/src/landingcomponent/Login.css
@@ -80,7 +80,7 @@ svg:not(:root) {
     width:70%;
         margin: auto;
        
-        height:600px;
+        height:100%;
         background-color: white;
 }
 .leftdfghjk{
