--- a/health-care/src/landingcomponent/PagesMain/Homelan.css
+++ b/health-care/src/landingcomponent/PagesMain/Homelan.css
@@ -1,13 +1,19 @@
+
+*{
+    margin:0;
+    padding:0;
+   box-sizing:border-box;
+}
+
 .style__pharmaHeader___1hcdG {
     width: 100%;
     background-color: #fff;
-    display: flex;
+    display:flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid white;
+    border:2px solid white;
     border-width: 2px 0;
-    /* border: 1px solid red; */
-}
+  }
 
 .style__pharmaHeader___1hcdG h1 {
     margin: 26px 0;
@@ -23,7 +29,7 @@ h1{
 color: #666;
 }
 :-webkit-any(article, aside, nav, section) h1 {
-    /* font-size: 1.5em; */
+  
     margin-block-start: 0.83em;
     margin-block-end: 0.83em;
 }
@@ -33,7 +39,7 @@ h1 {
     margin-block-end: 0.67em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    /* font-weight: bold; */
+   
 }
 .styles__creative-section___klRBC {
     width: 94%;
